--- a/.jnx/config.json
+++ b/.jnx/config.json
@@ -1,5 +1,5 @@
 {
     "standard-file": "page.php",
     "style-file": "style.css",
-    "script-file-name": "script.js"
+    "script-file": "script.js"
 }
